# rcv-near

./: .gitignore  README.md  index.html  package.json  src.06639fa5.js  src.06639fa5.js.map  src.4e083143.css  src.4e083143.css.map  src.85c4795b.js  src.85c4795b.js.map  src.b5ccb4ea.js  src.b5ccb4ea.js.map  src.bd66da3d.js  src.bd66da3d.js.map  src.d53687c2.css  src.d53687c2.css.map  src.f69400ca.css  src.f69400ca.css.map  src.f69400ca.js  src.f69400ca.js.map  tmp.md  tsconfig.json
2contract/src/: lib.rs
contract/: Cargo.toml  README.md
contract/src/: lib.rs
contract/tests/: ranked_choice.rs
src/: App.js  App.tsx  Card.tsx  Container.tsx  InputForm.tsx  config.js  config.ts  global.css  index.html  index.tsx  main.test.ts  utils.js  utils.ts
