[package]
name = "rcv-near"
version = "0.1.0"
edition = "2018"

[dependencies]
near-sdk = { version = "4.0.0-pre.2", features = ["unstable"] }
tallystick = { version = "0.4.3", default-features = false, features = ["nightly"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true